添加文件提取功能